templates/cluster-quay_template.yaml
---
# Source: cluster-quay/templates/route.yaml
kind: Service
apiVersion: v1
metadata:
  name: "registry"
  namespace: "quay-operator"
  annotations:
    openshift.io/generated-by: startx-helm-cluster-quay
  labels:
    app.startx.fr/scope: "myscope"
    app.startx.fr/cluster: "default"
    app.startx.fr/environment: "myenv"
    app.startx.fr/component: "mycomponent"
    app.startx.fr/app: "default-quay"
    app.startx.fr/version: "14.6.251"
    helm.sh/chart: "cluster-quay"
    app.kubernetes.io/component: "mycomponent"
    app.kubernetes.io/part-of: "default-quay"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "14.6.251"
    app.kubernetes.io/instance: "myscope-myenv-default-quay-14.6.251"
    app.kubernetes.io/name: "registry-service"
    quay-enterprise-component: app
    quay-enterprise-cr: startx
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    quay-enterprise-component: app
    quay-enterprise-cr: startx
  type: ClusterIP
  sessionAffinity: None
---
# Source: cluster-quay/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: "registry"
  namespace: "quay-operator"
  annotations:
    openshift.io/generated-by: startx-helm-cluster-quay
  labels:
    app.startx.fr/scope: "myscope"
    app.startx.fr/cluster: "default"
    app.startx.fr/environment: "myenv"
    app.startx.fr/component: "mycomponent"
    app.startx.fr/app: "default-quay"
    app.startx.fr/version: "14.6.251"
    helm.sh/chart: "cluster-quay"
    app.kubernetes.io/component: "mycomponent"
    app.kubernetes.io/part-of: "default-quay"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "14.6.251"
    app.kubernetes.io/instance: "myscope-myenv-default-quay-14.6.251"
    app.kubernetes.io/name: "registry-route"
spec:
  to:
    kind: Service
    name: "registry"
    weight: 100
  port:
    targetPort: 8443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
